// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapRuleToAnchor should map all available rules to the correct anchor 1`] = `
Array [
  "#10:1",
  "#10:2",
  "#10:3",
  "#10:4",
  "#11:1",
  "#11:4",
  "#11:5",
  "#12:1",
  "#12:1",
  "#12:2",
  "#13:1",
  "#13:1",
  "#13:1",
  "#13:2",
  "#13:3",
  "#13:4",
  "#13:4",
  "#13:4",
  "#13:5",
  "#13:6",
  "#13:6",
  "#13:7",
  "#13:8",
  "#14:1",
  "#14:10",
  "#14:1",
  "#14:1",
  "#14:1",
  "#14:2",
  "#14:3",
  "#14:4",
  "#14:5",
  "#14:6",
  "#14:7",
  "#14:8",
  "#14:9",
  "#15:1",
  "#15:2",
  "#15:3",
  "#15:4",
  "#15:5",
  "#15:5",
  "#15:5",
  "#15:6",
  "#15:7",
  "#15:7",
  "#15:7",
  "#15:8",
  "#15:9",
  "#16:1",
  "#16:10",
  "#16:11",
  "#16:11",
  "#16:1",
  "#16:1",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:4",
  "#16:5",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:8",
  "#16:9",
  "#16:9",
  "#16:9",
  "#16:9",
  "#16:9",
  "#17:1",
  "#17:10",
  "#17:11",
  "#17:2",
  "#17:6",
  "#17:7",
  "#17:9",
  "#18:1",
  "#18:2",
  "#1:1",
  "#1:2",
  "#1:3",
  "#2:10",
  "#2:2",
  "#2:2",
  "#2:2",
  "#2:3",
  "#2:4",
  "#2:5",
  "#2:6",
  "#2:7",
  "#2:8",
  "#2:8",
  "#2:8",
  "#2:9",
  "#2:9",
  "#3:1",
  "#3:2",
  "#3:4",
  "#4:1",
  "#4:10",
  "#4:11",
  "#4:11",
  "#4:2",
  "#4:3",
  "#4:4",
  "#4:4",
  "#4:4",
  "#4:4",
  "#4:5",
  "#4:6",
  "#4:7",
  "#4:8",
  "#4:9",
  "#5:10",
  "#5:2",
  "#5:3",
  "#5:6",
  "#5:7",
  "#5:8",
  "#5:9",
  "#6:1",
  "#6:2",
  "#6:2",
  "#6:2",
  "#6:2",
  "#6:3",
  "#6:3",
  "#6:4",
  "#6:5",
  "#6:5",
  "#6:5",
  "#6:7",
  "#6:7",
  "#7:1",
  "#7:10",
  "#7:11",
  "#7:11",
  "#7:12",
  "#7:3",
  "#7:3",
  "#7:3",
  "#7:3",
  "#7:4",
  "#7:4",
  "#7:6",
  "#7:7",
  "#7:8",
  "#7:9",
  "#8:1",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:1",
  "#8:1",
  "#8:2",
  "#8:2",
  "#8:2",
  "#8:3",
  "#8:3",
  "#8:4",
  "#8:4",
  "#8:4",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:6",
  "#8:6",
  "#8:6",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:8",
  "#8:8",
  "#8:9",
  "#8:9",
  "#8:9",
  "#8:9",
  "#9:1",
  "#9:1",
  "#9:1",
  "#9:2",
  "",
  "#2.-time-out",
  "#2.-time-out",
  "#2.-time-out",
  "#3.-team-time-out",
  "#3.-team-time-out",
  "#3.-team-time-out",
  "#4.-passive-play",
  "#4.-passive-play",
  "#4.-passive-play",
  "#4.-passive-play",
  "#4.-passive-play",
  "#6.-definition-of-clear-chance-of-scoring",
  "#6.-definition-of-clear-chance-of-scoring",
  "#6.-definition-of-clear-chance-of-scoring",
  "#6.-definition-of-clear-chance-of-scoring",
  "#7.-intervention-by-the-timekeeper-or-a-delegate",
  "#7.-intervention-by-the-timekeeper-or-a-delegate",
  "#7.-intervention-by-the-timekeeper-or-a-delegate",
  "#7.-intervention-by-the-timekeeper-or-a-delegate",
  "#8.-injured-player",
  "#8.-injured-player",
  "#guidelines-and-interpretations",
  "#not-respecting-the-distance",
  "#disqualification-during-the-last-30-seconds",
  "#hand-signals",
  "#guidelines-and-interpretations",
  "",
  "#substitution-area-regulations",
  "#substitution-area-regulations",
  "#substitution-area-regulations",
]
`;

exports[`mapRuleToAnchor should map all available rules to the correct anchor 2`] = `
Array [
  "#10:1",
  "#10:2",
  "#10:3",
  "#10:4",
  "#11:1",
  "#11:4",
  "#11:5",
  "#12:1",
  "#12:1",
  "#12:2",
  "#13:1",
  "#13:1",
  "#13:1",
  "#13:2",
  "#13:3",
  "#13:4",
  "#13:4",
  "#13:4",
  "#13:5",
  "#13:6",
  "#13:6",
  "#13:7",
  "#13:8",
  "#14:1",
  "#14:10",
  "#14:1",
  "#14:1",
  "#14:1",
  "#14:2",
  "#14:3",
  "#14:4",
  "#14:5",
  "#14:6",
  "#14:7",
  "#14:8",
  "#14:9",
  "#15:1",
  "#15:2",
  "#15:3",
  "#15:4",
  "#15:5",
  "#15:5",
  "#15:5",
  "#15:6",
  "#15:7",
  "#15:7",
  "#15:7",
  "#15:8",
  "#15:9",
  "#16:1",
  "#16:10",
  "#16:11",
  "#16:11",
  "#16:1",
  "#16:1",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:4",
  "#16:5",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:8",
  "#16:9",
  "#16:9",
  "#16:9",
  "#16:9",
  "#16:9",
  "#17:1",
  "#17:10",
  "#17:11",
  "#17:2",
  "#17:6",
  "#17:7",
  "#17:9",
  "#18:1",
  "#18:2",
  "#1:1",
  "#1:2",
  "#1:3",
  "#2:10",
  "#2:2",
  "#2:2",
  "#2:2",
  "#2:3",
  "#2:4",
  "#2:5",
  "#2:6",
  "#2:7",
  "#2:8",
  "#2:8",
  "#2:8",
  "#2:9",
  "#2:9",
  "#3:1",
  "#3:2",
  "#3:4",
  "#4:1",
  "#4:10",
  "#4:11",
  "#4:11",
  "#4:2",
  "#4:3",
  "#4:4",
  "#4:4",
  "#4:4",
  "#4:4",
  "#4:5",
  "#4:6",
  "#4:7",
  "#4:8",
  "#4:9",
  "#5:10",
  "#5:2",
  "#5:3",
  "#5:6",
  "#5:7",
  "#5:8",
  "#5:9",
  "#6:1",
  "#6:2",
  "#6:2",
  "#6:2",
  "#6:2",
  "#6:3",
  "#6:3",
  "#6:4",
  "#6:5",
  "#6:5",
  "#6:5",
  "#6:7",
  "#6:7",
  "#7:1",
  "#7:10",
  "#7:11",
  "#7:11",
  "#7:12",
  "#7:3",
  "#7:3",
  "#7:3",
  "#7:3",
  "#7:4",
  "#7:4",
  "#7:6",
  "#7:7",
  "#7:8",
  "#7:9",
  "#8:1",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:1",
  "#8:1",
  "#8:2",
  "#8:2",
  "#8:2",
  "#8:3",
  "#8:3",
  "#8:4",
  "#8:4",
  "#8:4",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:6",
  "#8:6",
  "#8:6",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:8",
  "#8:8",
  "#8:9",
  "#8:9",
  "#8:9",
  "#8:9",
  "#9:1",
  "#9:1",
  "#9:1",
  "#9:2",
  "",
  "#2.-time-out",
  "#2.-time-out",
  "#2.-time-out",
  "#3.-team-time-out",
  "#3.-team-time-out",
  "#3.-team-time-out",
  "#4.-passives-spiel",
  "#4.-passives-spiel",
  "#4.-passives-spiel",
  "#4.-passives-spiel",
  "#4.-passives-spiel",
  "#6.-definition-einer-klaren-torgelegenheit",
  "#6.-definition-einer-klaren-torgelegenheit",
  "#6.-definition-einer-klaren-torgelegenheit",
  "#6.-definition-einer-klaren-torgelegenheit",
  "#7.-eingreifen-durch-den-zeitnehmer",
  "#7.-eingreifen-durch-den-zeitnehmer",
  "#7.-eingreifen-durch-den-zeitnehmer",
  "#7.-eingreifen-durch-den-zeitnehmer",
  "#8.-verletzter-spieler",
  "#8.-verletzter-spieler",
  "#guidelines-und-interpretationen",
  "#abstandsvergehen",
  "#disqualifikation-in-den-letzten-30-sekunden",
  "#handzeichen",
  "#guidelines-und-interpretationen",
  "",
  "#auswechselraum-reglement",
  "#auswechselraum-reglement",
  "#auswechselraum-reglement",
]
`;

exports[`mapRuleToAnchor should map all available rules to the correct anchor 3`] = `
Array [
  "#10:1",
  "#10:2",
  "#10:3",
  "#10:4",
  "#11:1",
  "#11:4",
  "#11:5",
  "#12:1",
  "#12:1",
  "#12:2",
  "#13:1",
  "#13:1",
  "#13:1",
  "#13:2",
  "#13:3",
  "#13:4",
  "#13:4",
  "#13:4",
  "#13:5",
  "#13:6",
  "#13:6",
  "#13:7",
  "#13:8",
  "#14:1",
  "#14:10",
  "#14:1",
  "#14:1",
  "#14:1",
  "#14:2",
  "#14:3",
  "#14:4",
  "#14:5",
  "#14:6",
  "#14:7",
  "#14:8",
  "#14:9",
  "#15:1",
  "#15:2",
  "#15:3",
  "#15:4",
  "#15:5",
  "#15:5",
  "#15:5",
  "#15:6",
  "#15:7",
  "#15:7",
  "#15:7",
  "#15:8",
  "#15:9",
  "#16:1",
  "#16:10",
  "#16:11",
  "#16:11",
  "#16:1",
  "#16:1",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:3",
  "#16:4",
  "#16:5",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:6",
  "#16:8",
  "#16:9",
  "#16:9",
  "#16:9",
  "#16:9",
  "#16:9",
  "#17:1",
  "#17:10",
  "#17:11",
  "#17:2",
  "#17:6",
  "#17:7",
  "#17:9",
  "#18:1",
  "#18:2",
  "#1:1",
  "#1:2",
  "#1:3",
  "#2:10",
  "#2:2",
  "#2:2",
  "#2:2",
  "#2:3",
  "#2:4",
  "#2:5",
  "#2:6",
  "#2:7",
  "#2:8",
  "#2:8",
  "#2:8",
  "#2:9",
  "#2:9",
  "#3:1",
  "#3:2",
  "#3:4",
  "#4:1",
  "#4:10",
  "#4:11",
  "#4:11",
  "#4:2",
  "#4:3",
  "#4:4",
  "#4:4",
  "#4:4",
  "#4:4",
  "#4:5",
  "#4:6",
  "#4:7",
  "#4:8",
  "#4:9",
  "#5:10",
  "#5:2",
  "#5:3",
  "#5:6",
  "#5:7",
  "#5:8",
  "#5:9",
  "#6:1",
  "#6:2",
  "#6:2",
  "#6:2",
  "#6:2",
  "#6:3",
  "#6:3",
  "#6:4",
  "#6:5",
  "#6:5",
  "#6:5",
  "#6:7",
  "#6:7",
  "#7:1",
  "#7:10",
  "#7:11",
  "#7:11",
  "#7:12",
  "#7:3",
  "#7:3",
  "#7:3",
  "#7:3",
  "#7:4",
  "#7:4",
  "#7:6",
  "#7:7",
  "#7:8",
  "#7:9",
  "#8:1",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:10",
  "#8:1",
  "#8:1",
  "#8:2",
  "#8:2",
  "#8:2",
  "#8:3",
  "#8:3",
  "#8:4",
  "#8:4",
  "#8:4",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:5",
  "#8:6",
  "#8:6",
  "#8:6",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:7",
  "#8:8",
  "#8:8",
  "#8:9",
  "#8:9",
  "#8:9",
  "#8:9",
  "#9:1",
  "#9:1",
  "#9:1",
  "#9:2",
  "",
  "#2.-tiempo-muerto",
  "#2.-tiempo-muerto",
  "#2.-tiempo-muerto",
  "#3.-tiempo-muerto-de-equipo",
  "#3.-tiempo-muerto-de-equipo",
  "#3.-tiempo-muerto-de-equipo",
  "#4.-juego-pasivo",
  "#4.-juego-pasivo",
  "#4.-juego-pasivo",
  "#4.-juego-pasivo",
  "#4.-juego-pasivo",
  "#6.--definición-de-clara-ocasión-de-gol",
  "#6.--definición-de-clara-ocasión-de-gol",
  "#6.--definición-de-clara-ocasión-de-gol",
  "#6.--definición-de-clara-ocasión-de-gol",
  "#7.-intervención/interrupción-por-parte-del-cronometrador-o-del-delegado",
  "#7.-intervención/interrupción-por-parte-del-cronometrador-o-del-delegado",
  "#7.-intervención/interrupción-por-parte-del-cronometrador-o-del-delegado",
  "#7.-intervención/interrupción-por-parte-del-cronometrador-o-del-delegado",
  "#8.-jugador-lesionado",
  "#8.-jugador-lesionado",
  "#directrices-e-interpretaciones",
  "#no-respetar-la-distancia",
  "#descalificación-durante-los-últimos-30-segundos-de-juego",
  "#gestoforma",
  "#directrices-e-interpretaciones",
  "",
  "#reglamento-relativo-a-la-zona-de-cambios",
  "#reglamento-relativo-a-la-zona-de-cambios",
  "#reglamento-relativo-a-la-zona-de-cambios",
]
`;
